style.css
@import url('https://fonts.googleapis.com/css2?family=Bellefair&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');


:root {
    --very-dark-navy: rgb(11, 13, 23);
    --light-blue: rgb(208, 214, 209);
    --white: rgb(255, 255, 255);
}

*+* {
    box-sizing: border-box;
}

img {
    display: block;
}

button {
    border: none;
    background: none;
    cursor: pointer;
}

a {
    font: inherit;
    text-decoration: none;
}

h1 {
    font-weight: 400;
    margin: 0;
}

.heading {
    --_family: "Bellefair", serif;
    --_size: 18px;
    --_spacing: 0px;
    --_height: normal;
    font-family: var(--_family);
    /* font-size: var(--_size); */
    letter-spacing: var(--_spacing);
    line-height: var(--_height);
    text-transform: uppercase;
}

.heading-xl {
    /* --_size: 144px; */
    font-size: 8em;
    color: var(--white);
}

.heading-l {
    /* --_size: 100px; */
    font-size: 5.5em;
    color: var(--white);
}

.heading-m {
    /* --_size: 56px; */
    font-size: 3.1em;
    color: var(--white);
}

.heading-s {
    /* --_size: 32px; */
    font-size: 1.75em;
}

.heading-xs {
    --_family: "Barlow Condensed", sans-serif;
    /* --_size: 28px; */
    --_spacing: 4px;
    font-size: 1.5em;
}

.subhead-l {
    /* --_size: 28px; */
    font-size: 1.5em;
    color: var(--white);
}

.subhead-s {
    --_family: "Barlow Condensed", sans-serif;
    /* --_size: 14px; */
    --_spacing: 2px;
    font-size: 0.8em;
}

.nav-text {
    --_family: "Barlow Condensed", sans-serif;
    /* --_size: 16px; */
    --_spacing: 2px;
    font-size: 0.9em;
    color: var(--white);
}

.dark-text {
    color: var(--very-dark-navy);
}

.mid-text {
    color: var(--light-blue);
}

.light-text {
    color: var(--white);
}


/**** Body / Background ****/
body {
    position: relative;
    display: flex;
    flex-direction: column;

    font-family: "Barlow", sans-serif;
    font-weight: 400;
    font-size: 18px;
    letter-spacing: 0px;
    line-height: 180%;
    color: var(--light-blue);

    margin: 0;
    margin-inline: auto;
    padding-bottom: 1rem;
    min-height: 100dvh;
    width: 100vw;
    max-width: 2000px;
    background-color: black;
    overflow-x: hidden;
}

.bg-picture {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -5;
    user-select: none;
}

.bg-image {
    object-fit: cover;
    object-position: center;
    width: 100%;
    height: 100%;
}

/**** Header ****/
header {
    position: relative;
    top: 2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0rem 0rem 2rem 4rem;
}

.header-logo {
    margin-right: 4rem;
}

.mobile-menu,
#mobile-button {
    display: none;
}

nav {
    padding: 0rem 4rem 0rem 10%;
    background-color: rgba(255, 255, 255, 0.05);
    backdrop-filter: blur(10px);
}

.nav-list {
    counter-reset: list-item -1;
    display: flex;
    gap: 1rem;
    justify-content: space-between;
    min-width: 40vw;
    margin: 0;
    list-style-type: none;
}

.nav-list li {
    cursor: pointer;
    border-bottom-width: 3px;
    border-bottom-style: solid;
    border-bottom-color: transparent;
    transition: border-color 800ms;
}

.nav-list li[aria-current='true'] {
    border-bottom-color: white;
}

.nav-list li:not([aria-current='true']):hover {
    border-bottom-color: rgba(255, 255, 255, 0.5);
}

.nav-list .link {
    display: inline-block;
    padding-block: 2rem;
}

.nav-list .link::before {
    content: '0'counter(list-item) ' ';
    font-weight: bold;
}

/**** Content ****/
.wrapper {
    flex: 1 0 auto;
    display: grid;
    place-items: center;
}

.content {
    --_content-padding: 15rem;
    width: calc(100% - var(--_content-padding));
    height: 100%;
    max-width: 1500px;
    margin-inline: auto;
    display: flex;
    align-items: center;
}

.content-inner {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    margin-block: auto;
}

.explore-btn {
    --_btn-width: 272px;
    position: relative;
    justify-self: end;
    display: grid;
    place-content: center;
    width: var(--_btn-width);
    aspect-ratio: 1/1;
    margin-block: 4rem;
    border-radius: 1000px;
    background-color: var(--white);
}

.explore-btn::before {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    width: calc(var(--_btn-width) * 1.5);
    aspect-ratio: 1/1;
    border-radius: 1000px;
    opacity: 0;
    z-index: -1;
    background-color: rgba(255, 255, 255, 0.15);
    transition: opacity 500ms;
}

.explore-btn:hover::before {
    opacity: 1;
}

.outer {
    flex-direction: column;
    align-items: start;
    justify-content: space-between;
}

.page-heading {
    margin-block: 2rem 1rem;
}

.page-heading::before {
    content: '';
    font-weight: bold;
    opacity: 0.25;
    margin-right: 1.5ch;
}

/**** Destination ****/
.destination-outer .page-heading::before {
    content: '01';
}

.destination-image {
    margin-inline: auto;
}

.destination-content {
    margin-inline: auto;
    padding-inline: 3rem;
}

.destination-selectors {
    display: flex;
    align-items: baseline;
    gap: 2.2rem;
}

.destination-btn {
    padding-inline: 0;
    padding-bottom: 0.5rem;
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: transparent;
    transition: border-color 500ms;
}

.destination-btn[aria-current='true'] {
    color: var(--white);
    border-bottom-color: var(--white);
}

.destination-btn:not([aria-current='true']):hover {
    border-bottom-color: var(--light-blue);
}

.destination-heading {
    margin-block: 2rem;
}

.destination-text {
    padding-bottom: 3rem;
    margin-bottom: 3rem;
    border-bottom: 1px solid rgba(208, 214, 209, 0.25);
}

.destination-data {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.data-heading {
    margin-bottom: 1rem;
}

/**** Crew ****/
.crew-outer .page-heading::before {
    content: '02';
}

.crew-content {
    align-self: end;
}

.crew-name {
    margin-block: 1rem 2rem;
}

.crew-image {
    justify-self: center;
    min-height: 700px;
    mask-image:
        linear-gradient(to top,
            rgba(0, 0, 0, 0),
            rgba(0, 0, 0, 1) 12.5%);
}

.crew-selectors {
    display: flex;
    gap: 2rem;
    margin-block: 10rem 2rem;
}

.crew-btn {
    width: 15px;
    aspect-ratio: 1/1;
    border-radius: 1000px;
    background-color: var(--white);
    opacity: 0.17;
    transition: opacity 300ms;
}

.crew-btn[aria-current='true'] {
    opacity: 1;
}

.crew-btn:not([aria-current='true']):hover {
    opacity: 0.5;
}

/**** Technology ****/
.tech-outer .page-heading::before {
    content: '03';
}

.tech-content-inner {
    display: grid;
    grid-template-columns: auto 1fr auto;
    gap: 2rem;
    align-items: center;
}

.tech-selectors {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.tech-btn {
    color: var(--white);
    width: 80px;
    aspect-ratio: 1/1;
    border-radius: 1000px;
    border: 1px solid rgba(255, 255, 255, 0.4);
    transition: all 300ms;
}

.tech-btn[aria-current='true'] {
    color: var(--very-dark-navy);
    font-weight: bold;
    border: none;
    background-color: var(--white);
}

.tech-btn:not([aria-current='true']):hover {
    border-color: var(--white);
}

.tech-name {
    margin-block: 1rem 2rem;
}

.tech-text {
    min-height: 9rem;
}

.tech-image img {
    height: 65vh;
}

/**** Animations ****/
.fade-in {
    animation: fade-in 200ms linear forwards;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.fade-out {
    animation: fade-out 200ms linear forwards;
}

@keyframes fade-out {
    100% {
        opacity: 0;
    }
}


@media screen and (max-width: 1023px) {
    header {
        top: 0;
    }

    .content-inner {
        grid-template-columns: auto;
        text-align: center;
    }

    .explore-btn {
        justify-self: center;
    }

    .destination-image {
        object-fit: scale-down;
        max-width: 33vw;
        margin-block: 3rem;
    }

    .destination-selectors {
        justify-content: center;
    }

    .crew-content {
        margin-top: 3rem;
    }

    .crew-selectors {
        margin-block: 4rem 3rem;
        justify-content: center;
    }

    .crew-image {
        object-fit: scale-down;
        max-width: 50vw;
        min-height: unset;
    }

    .tech-outer {
        width: unset;
    }

    .tech-outer .page-heading {
        margin-left: 4rem;
    }

    .tech-content-inner {
        grid-template-columns: auto;
        text-align: center;
    }

    .tech-image {
        grid-area: 1 / 1 / 2 / 2;
        margin-top: 4rem;
    }

    .tech-image img {
        object-fit: scale-down;
        width: 100vw;
        height: unset;
    }

    .tech-selectors {
        flex-direction: row;
        justify-content: center;
    }

    .tech-text {
        padding-inline: calc(var(--_content-padding) / 2);
    }
}


@media screen and (max-width: 600px) {
    body {
        font-size: 14px;
    }

    header {
        top: 1rem;
        margin-inline: 1.5rem;
    }

    .header-logo {
        margin-right: 0;
    }

    #mobile-button {
        display: block;
    }

    .mobile-menu {
        display: flex;
        position: absolute;
        inset: 0 0 0 auto;
        width: 75vw;
        flex-direction: column;
        background-color: rgba(255, 255, 255, 0.05);
        backdrop-filter: blur(40px);
        z-index: 100;
        transition: translate 500ms;
    }

    .mobile-menu[aria-hidden='true'] {
        translate: 102%;
    }

    #close-button {
        align-self: flex-end;
        padding: 2rem 1.5rem 4rem;
    }

    .nav-list {
        flex-direction: column;
        gap: 3rem;
        font-size: 1.2em;
    }

    .nav-list li {
        border-bottom: none;
        border-right-width: 6px;
        border-right-style: solid;
        border-right-color: transparent;
        transition: border-color 800ms;
    }

    .nav-list li[aria-current='true'] {
        border-right-color: white;
    }

    .nav-list li:not([aria-current='true']):hover {
        border-right-color: rgba(255, 255, 255, 0.5);
    }

    .nav-list .link {
        padding: 0;
    }

    nav {
        display: none;
    }

    .content {
        --_content-padding: 1rem;
    }

    .page-heading,
    .tech-outer .page-heading {
        margin-left: 2rem;
    }

    .explore-btn {
        --_btn-width: 224px;
    }

    .outer {
        justify-content: unset;
    }

    .destination-content {
        padding-inline: 1rem;
    }

    .destination-image {
        max-width: 50vw;
    }
}

